--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.34MB/s(Youtube:不良林), server: 169.197.142.39, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-2.40MB/s(Youtube:不良林), server: 198.57.27.225, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-3.53MB/s(Youtube:不良林), server: 169.197.142.39, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-3.41MB/s(Youtube:不良林), server: 38.68.134.71, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-2.87MB/s(Youtube:不良林), server: 169.197.142.39, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇭🇰 香港-22.10MB/s(Youtube:不良林), server: 10.vip341.xyz, port: 443, type: vmess, uuid: 2f0415a4-9acd-3435-a780-e447a2ce79fb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /ny, ws-headers: {Host: 10.vip341.xyz}}
-  - {name: 🇺🇸 (已存活1天)美国-2.96MB/s(Youtube:不良林), server: 38.68.134.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇳🇱 荷兰-416.5KB/s(Youtube:不良林), server: 213.183.51.171, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇳🇱 荷兰-767.3KB/s(Youtube:不良林), server: 213.183.59.211, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇳🇱 荷兰-449.0KB/s(Youtube:不良林), server: 213.183.51.171, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇭🇰 香港-445.8KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 阿联酋-1.17MB/s(Youtube:不良林), server: 217.138.193.6, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇬🇧 英国-3.24MB/s(Youtube:不良林), server: 152.89.210.105, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: usa-dallas.lvuft.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: usa-dallas.lvuft.com}}
+  - {name: 🇺🇸 美国-4.55MB/s(Youtube:不良林), server: u2.anmu.one, port: 16161, type: vmess, uuid: 919ac815-1776-47fe-8b54-508ef4f39421, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.94MB/s(Youtube:不良林), server: u2.anmu.one, port: 16499, type: vmess, uuid: 32b306e1-d5b1-4913-d8d3-56ac23637de7, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.22MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-958.1KB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
       - 🇭🇰 香港-22.10MB/s(Youtube:不良林)
-      - 🇺🇸 (已存活1天)美国-2.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-767.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-449.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-445.8KB/s(Youtube:不良林)
-      - 阿联酋-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
       - 🇭🇰 香港-22.10MB/s(Youtube:不良林)
-      - 🇺🇸 (已存活1天)美国-2.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-767.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-449.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-445.8KB/s(Youtube:不良林)
-      - 阿联酋-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
       - 🇭🇰 香港-22.10MB/s(Youtube:不良林)
-      - 🇺🇸 (已存活1天)美国-2.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-767.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-449.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-445.8KB/s(Youtube:不良林)
-      - 阿联酋-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
       - 🇭🇰 香港-22.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-445.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
       - 🇭🇰 香港-22.10MB/s(Youtube:不良林)
-      - 🇺🇸 (已存活1天)美国-2.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-767.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-449.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-445.8KB/s(Youtube:不良林)
-      - 阿联酋-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
       - 🇭🇰 香港-22.10MB/s(Youtube:不良林)
-      - 🇺🇸 (已存活1天)美国-2.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-767.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-449.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-445.8KB/s(Youtube:不良林)
-      - 阿联酋-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
       - 🇭🇰 香港-22.10MB/s(Youtube:不良林)
-      - 🇺🇸 (已存活1天)美国-2.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-767.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-449.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-445.8KB/s(Youtube:不良林)
-      - 阿联酋-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
       - 🇭🇰 香港-22.10MB/s(Youtube:不良林)
-      - 🇺🇸 (已存活1天)美国-2.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-416.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-767.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-449.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-445.8KB/s(Youtube:不良林)
-      - 阿联酋-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
