--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-9.34MB/s(Youtube:不良林), server: ocrb1.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: ocrb1.moonfree.top}}
   - {name: 🇺🇸 美国-3.61MB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-2.98MB/s(Youtube:不良林), server: 134.195.196.231, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-3.38MB/s(Youtube:不良林), server: 38.68.134.71, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-2.92MB/s(Youtube:不良林), server: 198.57.27.225, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 45.35.84.162, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 45.35.84.162}}
-  - {name: 🇺🇸 美国-4.27MB/s(Youtube:不良林), server: u2.anmu.one, port: 16161, type: vmess, uuid: 919ac815-1776-47fe-8b54-508ef4f39421, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-223.1KB/s(Youtube:不良林), server: 152.89.210.105, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇺🇸 美国-3.44MB/s(Youtube:不良林), server: 38.68.134.71, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇭🇰 香港-20.78MB/s(Youtube:不良林), server: 10.vip341.xyz, port: 443, type: vmess, uuid: 2f0415a4-9acd-3435-a780-e447a2ce79fb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /ny, ws-headers: {Host: 10.vip341.xyz}}
+  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 169.197.142.39, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: 45.35.84.162, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 45.35.84.162}}
+  - {name: 🇺🇸 美国-3.54MB/s(Youtube:不良林), server: u2.anmu.one, port: 16161, type: vmess, uuid: 919ac815-1776-47fe-8b54-508ef4f39421, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.35MB/s(Youtube:不良林), server: u2.anmu.one, port: 16499, type: vmess, uuid: 32b306e1-d5b1-4913-d8d3-56ac23637de7, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.36MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-373.9KB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-9.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇬🇧 英国-223.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-373.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-9.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇬🇧 英国-223.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-373.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-9.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇬🇧 英国-223.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-373.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-9.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇬🇧 英国-223.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-373.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-9.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇬🇧 英国-223.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-373.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-9.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇬🇧 英国-223.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-373.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-9.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇬🇧 英国-223.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-373.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
