--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.61MB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇬🇧 英国-223.1KB/s(Youtube:不良林), server: 152.89.210.105, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 🇺🇸 美国-3.44MB/s(Youtube:不良林), server: 38.68.134.71, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-2.88MB/s(Youtube:不良林), server: 198.57.27.225, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇭🇰 香港-20.78MB/s(Youtube:不良林), server: 10.vip341.xyz, port: 443, type: vmess, uuid: 2f0415a4-9acd-3435-a780-e447a2ce79fb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /ny, ws-headers: {Host: 10.vip341.xyz}}
-  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 169.197.142.39, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 (已存活1天)美国-3.43MB/s(Youtube:不良林), server: 38.68.134.71, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇭🇰 香港-161.0KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.93MB/s(Youtube:不良林), server: 198.57.27.225, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: 45.35.84.162, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 45.35.84.162}}
   - {name: 🇺🇸 美国-3.54MB/s(Youtube:不良林), server: u2.anmu.one, port: 16161, type: vmess, uuid: 919ac815-1776-47fe-8b54-508ef4f39421, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.35MB/s(Youtube:不良林), server: u2.anmu.one, port: 16499, type: vmess, uuid: 32b306e1-d5b1-4913-d8d3-56ac23637de7, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-223.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
       - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 (已存活1天)美国-3.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-161.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-223.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
       - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 (已存活1天)美国-3.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-161.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-223.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
       - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 (已存活1天)美国-3.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-161.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
@@ -67,17 +67,18 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-161.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-223.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
       - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 (已存活1天)美国-3.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-161.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
@@ -88,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-223.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
       - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 (已存活1天)美国-3.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-161.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
@@ -104,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-223.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
       - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 (已存活1天)美国-3.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-161.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
@@ -129,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-223.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.88MB/s(Youtube:不良林)
       - 🇭🇰 香港-20.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 (已存活1天)美国-3.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-161.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
